Fix BigFoot popover z-index clash with table of contents toggle

--- a/src/_includes/style.css
+++ b/src/_includes/style.css
@@ -2561,7 +2561,7 @@ h5.review__title {
 
 .bigfoot-footnote {
   position: absolute;
-  z-index: 10;
+  z-index: 25;
   top: 0;
   left: 0;
   display: inline-block;
@@ -2632,7 +2632,7 @@ h5.review__title {
     position: absolute;
     bottom: 0.3375em;
     left: 0.3375em;
-    z-index: 14;
+    z-index: 29;
     display: block;
     height: 0.78125em;
     width: 0.625em;
@@ -2648,7 +2648,7 @@ h5.review__title {
     content: '';
     position: absolute;
     width: 100%;
-    z-index: 12;
+    z-index: 27;
     left: 0; }
   .bigfoot-footnote.is-scrollable .bigfoot-footnote__wrapper:before {
     top: -1px;
@@ -2671,7 +2671,7 @@ h5.review__title {
 
 .bigfoot-footnote__wrapper {
   position: relative;
-  z-index: 14;
+  z-index: 29;
   width: 22em;
   display: inline-block;
   box-sizing: inherit;
@@ -2683,7 +2683,7 @@ h5.review__title {
 
 .bigfoot-footnote__content {
   position: relative;
-  z-index: 8;
+  z-index: 23;
   display: inline-block;
   max-height: 15em;
   padding: 1.1em 1.3em 1.2em;
@@ -2703,7 +2703,7 @@ h5.review__title {
 
 .bigfoot-footnote__tooltip {
   position: absolute;
-  z-index: 12;
+  z-index: 27;
   box-sizing: border-box;
   margin-left: -0.65em;
   width: 1.3em;
